# actually_smart_pointer

./: CMakeLists.txt  LICENSE  README.md  draw_plot.py  main.cpp
include/: actually_smart_pointer.hpp
src/: actually_smart_pointer.cpp
tests/: benchmark_asp.cpp  benchmark_std.cpp
